--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"description": "Opus bindings for Node",
 	"main": "lib/index.js",
 	"types": "typings/index.d.ts",
-	"author": "iCrawl <icrawltogo@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"install": "node-pre-gyp install --fallback-to-build",
+		"prepare": "node-pre-gyp install --fallback-to-build",
 		"build": "node-pre-gyp install build package",
 		"lint": "prettier --check . && eslint lib --format=pretty",
 		"lint:fix": "prettier --write . && eslint lib --fix --format=pretty",
@@ -27,18 +26,18 @@
 		"url": "https://github.com/discordjs/opus.git"
 	},
 	"dependencies": {
-		"@discordjs/node-pre-gyp": "^0.4.5",
-		"node-addon-api": "^8.1.0"
+		"@mapbox/node-pre-gyp": "2.0.0",
+		"node-addon-api": "8.3.1"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.2",
-		"eslint": "^8.25.0",
-		"eslint-config-neon": "^0.1.39",
-		"eslint-formatter-pretty": "^4.1.0",
-		"node-gyp": "^9.3.0",
-		"prettier": "^2.7.1",
-		"prism-media": "^1.3.4",
-		"typescript": "^4.8.4"
+		"@types/node": "22.15.21",
+		"eslint": "9.27.0",
+		"eslint-config-neon": "0.2.7",
+		"eslint-formatter-pretty": "6.0.1",
+		"node-gyp": "11.2.0",
+		"prettier": "3.5.3",
+		"prism-media": "1.3.5",
+		"typescript": "5.8.3"
 	},
 	"engines": {
 		"node": ">=12.0.0"
@@ -52,5 +51,6 @@
 		"napi_versions": [
 			3
 		]
-	}
+	},
+	"packageManager": "yarn@4.9.1"
 }
