--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@discordjs/opus",
+	"name": "libopus",
 	"version": "0.10.0",
 	"description": "Opus bindings for Node",
 	"main": "lib/index.js",
@@ -23,7 +23,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/discordjs/opus.git"
+		"url": "https://github.com/biw/libopus-js.git"
 	},
 	"dependencies": {
 		"@mapbox/node-pre-gyp": "2.0.0",
@@ -36,7 +36,6 @@
 		"eslint-formatter-pretty": "6.0.1",
 		"node-gyp": "11.2.0",
 		"prettier": "3.5.3",
-		"prism-media": "1.3.5",
 		"typescript": "5.8.3"
 	},
 	"engines": {
@@ -47,7 +46,7 @@
 		"module_path": "./prebuild/{node_abi}-napi-v{napi_build_version}-{platform}-{arch}-{libc}-{libc_version}/",
 		"remote_path": "v{version}",
 		"package_name": "{module_name}-v{version}-{node_abi}-napi-v{napi_build_version}-{platform}-{arch}-{libc}-{libc_version}.tar.gz",
-		"host": "https://github.com/discordjs/opus/releases/download/",
+		"host": "https://github.com/biw/libopus-js/releases/download/",
 		"napi_versions": [
 			3
 		]
