--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,16 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:
-          [
-            macos-12,
-            macos-13,
-            ubuntu-20.04,
-            ubuntu-22.04,
-            windows-2019,
-            windows-2022,
-          ]
-        node: [20, 22, 24, 25, 26]
+        os: [macos-12, macos-13, ubuntu-20.04, ubuntu-22.04, windows-2022]
+        node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -50,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [20, 22, 24, 25, 26]
+        node: [20, 22, 24, 25]
     steps:
       - name: Setup env with Node v${{ matrix.node }}
         run: |
@@ -75,7 +67,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04]
-        node: [20, 22, 24, 25, 26]
+        node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -102,7 +94,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-14]
-        node: [20, 22, 24, 25, 26]
+        node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -128,7 +120,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [20, 22, 24, 25, 26]
+        node: [20, 22, 24, 25]
     steps:
       - name: Setup env with Node v${{ matrix.node }}
         run: |
