--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "libopus",
-	"version": "0.10.0",
-	"description": "Opus bindings for Node",
+	"name": "libopus-node",
+	"version": "0.0.0",
+	"description": "libopus bindings for Node",
 	"main": "lib/index.js",
 	"types": "typings/index.d.ts",
 	"license": "MIT",
@@ -23,7 +23,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/biw/libopus-js.git"
+		"url": "https://github.com/biw/libopus-node.git"
 	},
 	"dependencies": {
 		"@mapbox/node-pre-gyp": "2.0.0",
@@ -42,11 +42,11 @@
 		"node": ">=12.0.0"
 	},
 	"binary": {
-		"module_name": "opus",
+		"module_name": "libopus-node",
 		"module_path": "./prebuild/{node_abi}-napi-v{napi_build_version}-{platform}-{arch}-{libc}-{libc_version}/",
 		"remote_path": "v{version}",
 		"package_name": "{module_name}-v{version}-{node_abi}-napi-v{napi_build_version}-{platform}-{arch}-{libc}-{libc_version}.tar.gz",
-		"host": "https://github.com/biw/libopus-js/releases/download/",
+		"host": "https://github.com/biw/libopus-node/releases/download/",
 		"napi_versions": [
 			3
 		]
