--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-13, ubuntu-20.04, ubuntu-22.04, windows-2022]
+        os:
+          [
+            macos-15-intel,
+            ubuntu-22.04,
+            ubuntu-24.04,
+            windows-2022,
+            windows-2025,
+          ]
         node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
@@ -66,7 +73,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-22.04, ubuntu-24.04]
         node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
@@ -93,7 +100,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-14]
+        os: [macos-14, macos-15, macos-26]
         node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
