--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-13, ubuntu-20.04, ubuntu-22.04, windows-2022]
+        os:
+          [
+            macos-15-intel,
+            ubuntu-22.04,
+            ubuntu-24.04,
+            windows-2022,
+            windows-2025,
+          ]
         node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
@@ -33,7 +40,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: 'build/stage/**/*.tar.gz'
+          path: "build/stage/**/*.tar.gz"
 
   build_musl_x86_64:
     name: Prebuild x86_64 (musl)
@@ -66,7 +73,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: 'build/stage/**/*.tar.gz'
+          path: "build/stage/**/*.tar.gz"
 
   build_aarch64_linux:
     name: Prebuild aarch64 Linux
@@ -74,7 +81,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-22.04, ubuntu-24.04]
         node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
@@ -100,7 +107,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: 'build/stage/**/*.tar.gz'
+          path: "build/stage/**/*.tar.gz"
 
   build_aarch64_mac:
     name: Prebuild aarch64 macOS
@@ -108,7 +115,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-14]
+        os: [macos-14, macos-15, macos-26]
         node: [20, 22, 24, 25]
     steps:
       - name: Checkout repository
@@ -132,7 +139,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: 'build/stage/**/*.tar.gz'
+          path: "build/stage/**/*.tar.gz"
 
   build_musl_aarch64:
     name: Prebuild aarch64 (musl)
@@ -174,4 +181,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: 'build/stage/**/*.tar.gz'
+          path: "build/stage/**/*.tar.gz"
