--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,26 +3,29 @@ on:
   release:
     types: [published]
 jobs:
-  build_x86_64:
-    name: Prebuild x86_64
+  build:
+    name: Prebuild node ${{ matrix.node }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os:
           [
-            macos-15-intel,
+            macos-13,
+            macos-14,
+            macos-15,
             ubuntu-22.04,
+            ubuntu-22.04-arm,
             ubuntu-24.04,
+            ubuntu-24.04-arm,
             windows-2022,
-            windows-2025,
           ]
-        node: [20, 22, 24, 25]
+        node: [18, 20, 22, 24]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
-          submodules: recursive
+          submodules: true
 
       - name: Install Node v${{ matrix.node }}
         uses: actions/setup-node@v4
@@ -32,59 +35,10 @@ jobs:
       - name: Enable Corepack
         run: corepack enable
 
-      - name: Cache Yarn dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            .yarn/cache
-            .yarn/install-state.gz
-          key: ${{ runner.os }}-yarn-${{ github.ref }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-${{ github.ref }}-
-            ${{ runner.os }}-yarn-
-
       - name: Install dependencies
         env:
           npm_config_build_from_source: true
         run: yarn install --immutable
-
-      - name: Package prebuild
-        run: yarn prebuild
-
-      - name: Upload prebuild asset
-        uses: icrawl/action-artifact@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          path: "build/stage/**/*.tar.gz"
-
-  build_musl_x86_64:
-    name: Prebuild x86_64 (musl)
-    runs-on: ubuntu-latest
-    container:
-      image: node:${{ matrix.node }}-alpine
-    strategy:
-      fail-fast: false
-      matrix:
-        node: [20, 22, 24, 25]
-    steps:
-      - name: Setup env with Node v${{ matrix.node }}
-        run: |
-          apk add --update
-          apk add --no-cache ca-certificates git curl build-base python3 g++ make corepack
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Install dependencies
-        env:
-          npm_config_build_from_source: true
-        run: yarn install --immutable --unsafe-perm
 
       - name: Package prebuild
         run: yarn build
@@ -96,141 +50,43 @@ jobs:
         with:
           path: "build/stage/**/*.tar.gz"
 
-  build_aarch64_linux:
-    name: Prebuild aarch64 Linux
+  build_musl:
+    name: Prebuild node ${{ matrix.node }} on ${{ matrix.os }} (musl)
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, ubuntu-24.04]
-        node: [20, 22, 24, 25]
+        os: [ubuntu-latest, ubuntu-24.04-arm]
+        node: [18, 20, 22, 24]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
-          submodules: recursive
+          submodules: true
 
-      - name: Install Node v${{ matrix.node }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Cache Yarn dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            .yarn/cache
-            .yarn/install-state.gz
-          key: ${{ runner.os }}-yarn-${{ github.ref }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-${{ github.ref }}-
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        env:
-          npm_config_build_from_source: true
-        run: yarn install --immutable
-
-      - name: Package prebuild
+      # Workaround https://github.com/actions/runner/issues/801
+      - name: Setup container
         run: |
-          sudo apt update -y && sudo apt install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-          CC=aarch64-linux-gnu-gcc CXX=aarch64-linux-gnu-g++ yarn node-pre-gyp --target_arch=arm64 configure build package
+          docker run --name runner --rm -it -d -v $PWD:/node-opus -w /node-opus node:${{ matrix.node }}-alpine
 
-      - name: Upload prebuild asset
-        uses: icrawl/action-artifact@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          path: "build/stage/**/*.tar.gz"
-
-  build_aarch64_mac:
-    name: Prebuild aarch64 macOS
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-14, macos-15, macos-26]
-        node: [20, 22, 24, 25]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Install Node v${{ matrix.node }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Cache Yarn dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            .yarn/cache
-            .yarn/install-state.gz
-          key: ${{ runner.os }}-yarn-${{ github.ref }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-${{ github.ref }}-
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        run: yarn install --immutable
-
-      - name: Package prebuild
-        run: yarn prebuild
-
-      - name: Upload prebuild asset
-        uses: icrawl/action-artifact@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          path: "build/stage/**/*.tar.gz"
-
-  build_musl_aarch64:
-    name: Prebuild aarch64 (musl)
-    runs-on: ubuntu-latest
-    container:
-      image: node:${{ matrix.node }}-alpine
-    strategy:
-      fail-fast: false
-      matrix:
-        node: [20, 22, 24, 25]
-    steps:
       - name: Setup env with Node v${{ matrix.node }}
         run: |
-          apk add --update
-          apk add --no-cache ca-certificates git curl build-base python3 g++ make corepack
+          docker exec runner apk add --update
+          docker exec runner apk add --no-cache ca-certificates git curl build-base python3 g++ make corepack
 
       - name: Enable Corepack
-        run: corepack enable
-
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Setup musl cross compiler
-        run: |
-          curl -OL https://musl.cc/aarch64-linux-musl-cross.tgz
-          tar -xzvf aarch64-linux-musl-cross.tgz
-          $(pwd)/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc --version
+        run: docker exec runner corepack enable
 
       - name: Install dependencies
         env:
           npm_config_build_from_source: true
-        run: yarn install --immutable --unsafe-perm
+        run: docker exec runner yarn install --immutable --unsafe-perm
 
       - name: Package prebuild
-        run: |
-          CC=$(pwd)/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc \
-          CXX=$(pwd)/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++ \
-          yarn node-pre-gyp --target_arch=arm64 configure build package
+        run: docker exec runner yarn build
+
+      - name: Stop container
+        run: docker rm -f runner
 
       - name: Upload prebuild asset
         uses: icrawl/action-artifact@v2
