--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build
+
 on:
   push:
     branches:
@@ -8,81 +9,67 @@ on:
   pull_request:
     branches:
       - "**"
+
 jobs:
-  build:
-    name: Build node ${{ matrix.node }} on ${{ matrix.os }}
+  prebuild:
+    name: Prebuild (N-API) on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os:
-          [
-            macos-13,
-            macos-14,
-            macos-15,
-            ubuntu-22.04,
-            ubuntu-22.04-arm,
-            ubuntu-24.04,
-            ubuntu-24.04-arm,
-            windows-2022,
-          ]
-        node: [18, 20, 22, 24]
+          - macos-13
+          - ubuntu-22.04
+          - windows-2022
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
           submodules: true
 
-      - name: Install Node v${{ matrix.node }}
+      - name: Install Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 22
+          cache: yarn
 
       - name: Enable Corepack
         run: corepack enable
 
       - name: Install dependencies
-        env:
-          npm_config_build_from_source: true
         run: yarn install --immutable
 
-      - name: Package prebuild
-        run: yarn build
+      - name: Build N-API prebuilds
+        run: yarn prebuild
 
-  build_musl:
-    name: Build node ${{ matrix.node }} on ${{ matrix.os }} (musl)
-    runs-on: ${{ matrix.os }}
+      # TODO: optionally upload the prebuilds as an artifact if you want to
+      # gate publishing on CI or aggregate from multiple jobs.
+
+  prebuild_musl:
+    name: Prebuild (linux-musl) with Node ${{ matrix.node }}
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm]
-        node: [18, 20, 22, 24]
+        node: [22] # you can add more if you really want, but N-API means one is enough
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
           submodules: true
 
-      # Workaround https://github.com/actions/runner/issues/801
-      - name: Setup container
+      - name: Build musl prebuilds in Alpine
         run: |
-          docker run --name runner --rm -it -d -v $PWD:/node-opus -w /node-opus node:${{ matrix.node }}-alpine
-
-      - name: Setup env with Node v${{ matrix.node }}
-        run: |
-          docker exec runner apk add --update
-          docker exec runner apk add --no-cache ca-certificates git curl build-base python3 g++ make corepack
-
-      - name: Enable Corepack
-        run: docker exec runner corepack enable
-
-      - name: Install dependencies
-        env:
-          npm_config_build_from_source: true
-        run: docker exec runner yarn install --immutable --unsafe-perm
-
-      - name: Package prebuild
-        run: docker exec runner yarn build
-
-      - name: Stop container
-        run: docker rm -f runner
+          docker run --rm \
+            -v "${{ github.workspace }}:/work" \
+            -w /work \
+            node:${{ matrix.node }}-alpine \
+            sh -lc '
+              corepack enable &&
+              yarn install --immutable --unsafe-perm &&
+              # Build N-API prebuilds for musl, tagging libc so node-gyp-build
+              # can prefer them on Alpine.
+              yarn prebuild
+            '
