--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,14 +28,26 @@ jobs:
         with:
           submodules: true
 
-      - name: Install Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
-          cache: yarn
+          node-version: 20
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Enable Yarn Berry
+        run: |
+          corepack enable
+          yarn set version berry
+
+      - name: Cache Yarn dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            .yarn/cache
+            .yarn/install-state.gz
+          key: ${{ runner.os }}-yarn-${{ github.ref }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-${{ github.ref }}-
+            ${{ runner.os }}-yarn-
 
       - name: Install dependencies
         run: yarn install --immutable
