--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ include/
 !deps/opus/include
 prebuild/
 test/
+
+# yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+prebuilds/
