--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/biw/libopus-node.git"
+    "url": "git+https://github.com/biw/libopus-node.git"
   },
   "dependencies": {
     "node-addon-api": "8.3.1",
