small fix for github releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,7 +165,7 @@ jobs:
     name: Publish to npm
     runs-on: ubuntu-22.04
     permissions:
-      contents: read
+      contents: write
       id-token: write
     needs:
       - build
