--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,6 +183,28 @@ jobs:
         with:
           node-version: 20
 
+      - name: Enable Yarn Berry
+        run: |
+          corepack enable
+          yarn set version berry
+
+      - name: Cache Yarn dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            .yarn/cache
+            .yarn/install-state.gz
+          key: ${{ runner.os }}-yarn-${{ github.ref }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-${{ github.ref }}-
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
+      - name: Build TypeScript artifacts
+        run: yarn build-tsup
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
