--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,6 +205,9 @@ jobs:
       - name: Build TypeScript artifacts
         run: yarn build-tsup
 
+      - name: Remove unneeded build artifacts
+        run: rm -rf build
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
