--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,10 +126,10 @@ jobs:
           submodules: true
 
       - name: Build on OpenBSD
-        uses: cross-platform-actions/action@v0.25.0
+        uses: cross-platform-actions/action@v0.30.0
         with:
           operating_system: openbsd
-          version: '7.6'
+          version: "7.8"
           architecture: x86-64
           run: |
             set -euo pipefail
